--- a/src/evolvingImages/index.html
+++ b/src/evolvingImages/index.html
@@ -20,8 +20,7 @@
 
     <script>
       window.start = function(setImageCb) {
-          console.log('calling init');
-          var canvas = document.querySelector('#screenshot-canvas');//$('#screenshot-canvas')[0];
+          var canvas = document.querySelector('#screenshot-canvas');
           var ctx = canvas.getContext('2d');
           var localMediaStream;
           var errorCallback;
@@ -29,14 +28,14 @@
           document.querySelector('#stopButton').addEventListener('click', stop);
           document.querySelector('#captureButton').addEventListener('click', takeSnapshot);
           document.querySelector('#playMovieButton').addEventListener('click', window.playMoveClick);
-          // $('#stopButton').on('click', stop);
-          // $('#captureButton').on('click', takeSnapshot);
 
           function errorCallback(error) {
               console.log('There was a problem with using your webcam! %o', error);
           };
 
           function takeSnapshot() {
+              canvas.width = document.querySelector('#screenshot-stream').videoWidth;
+              canvas.height = document.querySelector('#screenshot-stream').videoHeight;
               console.log('calling takeSnapshot');
               if (localMediaStream) {
                   snapshot();
@@ -45,13 +44,11 @@
                       navigator.mediaDevices.getUserMedia({audio: false, video: true}).then(function(stream) {
                           document.querySelector('#screenshot-stream').src = window.URL.createObjectURL(stream);
                           localMediaStream = window.URL.createObjectURL(stream);
-                          sizeCanvas();
                       }).catch(errorCallback);
                   } else if (navigator.webkitGetUserMedia) {
                       navigator.webkitGetUserMedia({video: true}, function(stream) {
                           document.querySelector('#screenshot-stream').src = window.URL.createObjectURL(stream);
                           localMediaStream = stream;
-                          sizeCanvas();
                       }, errorCallback);
                   }
               }
@@ -60,26 +57,13 @@
           function stop() {
               console.log('calling stop');
               document.querySelector('#screenshot-stream').pause();
-              // localMediaStream.stop(); // Doesn't do anything in Chrome
-              // document.querySelector('#screenshot-stream').hidden = true;
           };
-
-          function sizeCanvas() {
-              console.log('calling sizeCanvas');
-              // video.onloadedmetadata not firing in Chrome so we have to hack.
-              // See crbug.com/110938.
-              setTimeout(function() {
-                  canvas.width = document.querySelector('#screenshot-stream').videoWidth;
-                  canvas.height = document.querySelector('#screenshot-stream').videoHeight;
-                  console.log('OK now click the capture button');
-              }, 2000); // stupid shit
-          }
 
           function snapshot() {
               console.log('calling snapshot');
               ctx.drawImage(document.querySelector('#screenshot-stream'), 0, 0);
-              setImageCb(ctx.getImageData(0, 0, canvas.width, canvas.height));
               stop();
+              setImageCb(ctx.getImageData(0, 0, canvas.width, canvas.height));
           }
       }
     </script>
